--- a/index.html
+++ b/index.html
@@ -10,38 +10,67 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href=" ">Home</a ></li>
+                <li><a href="#about">About</a ></li>
+                <li><a href="#projects">Projects</a ></li>
+                <li><a href="#publication">Publication</a ></li>
+                <li><a href="#contact">Contact</a ></li>
             </ul>
         </nav>
     </header>
 
     <section id="home">
         <div class="intro">
-           
             <h1>Welcome to My Personal Website</h1>
-            <p>Hello! I'm  <b>Zhou Tao</b>, major in <b>Stochastic Partial Differential Equations</b>.</p>
-        </div>
+            <p>Hello! I'm <b>Zhou Tao</b>, major in <b>Stochastic Partial Differential Equations</b>.</p >
+            
+        </div>/
     </section>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>2024.09-Today, I am an assistant professor at Department of Applied Mathematics, HunnU.  </p>
-        <p>2023.08-2024.08, I did my postdoc at Department of Applied Mathematics, PolyU worked with Dr.Jianbo Cui.</p>
-        <p>2018.09-2023.08, I did my PhD at Academy of Mathematics and Systems Science, CAS, where I was supervised by Prof. Jialin Hong.</p>
+        <p>2024.09-, Assistant Professor, School of Mathematics and Statistics, HNNU, Changsha.</p >
+        <p>08.2023-08.2024, Postdoctoral Fellow, AMA, PolyU, Hong Kong, worked with Dr. Jianbo Cui.</p >
+        <p>09.2018-08.2023, Ph.D., Chinese Academy of Sciences, Beijing, where I was supervised by Prof. Jialin Hong, major in Computational Mathematics.</p >
+        <p>09.2014-06.2018, B.S., Hunan Normal University, Changsha, major in Statistics.</p >
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
             <h3>Project 1</h3>
-            <p>Description of project 1.</p>
+            <p>Rough Wasserstein Hamiltonian flow. (with Jianbo Cui, Derui Sheng)</p >
         </div>
         <div class="project">
             <h3>Project 2</h3>
-            <p>Description of project 2.</p>
+            <p>Convergence of adaptive RKHS regularized estimators. (with Zhongyang Li, Fei Lu)</p >
+        </div>
+        <div class="project">
+            <h3>Project 3</h3>
+            <p>Large deviations principle in Hölder norm and support theorem for stochastic delay differential equations with super-linearly growing coefficients. (with Ziheng Chen)</p >
+        </div>
+    </section>
+
+    <section id="publication">
+        <div class="publication">
+            <h2>Publications</h2>
+            <ul>
+                <li class="citation">
+                    A splitting semi-implicit method for stochastic incompressible Euler equations on T2. (Joint with Jialin Hong and Derui Sheng) IMA J. Numer. Anal., 43 (2023) 2748-2776. DOI: 10.1093/imanum/drac054 (Q1, Rank 44/267 in Applied Mathematics, Impact Factor: 2.713)
+                </li>
+                <li class="citation">
+                    Strong error analysis of Euler methods for overdamped generalized Langevin equations with fractional noise: Nonlinear case. (Joint with Xinjie Dai, Jialin Hong and Derui Sheng) ESAIM Math. Model. Numer. Anal. 57 (2023) 1981-2006. DOI: 10.1051/m2an/2023015 (Q2, Rank 85/267 in Applied Mathematics, Impact Factor: 1.935)
+                </li>
+                <li class="citation">
+                    CLT for approximating ergodic limit of SPDEs via a full discretization. (Joint with Chuchu Chen, Tonghe Dang and Jialin Hong) Stochastic Process. Appl. 157 (2023) 1–41. DOI: 10.1016/j.spa.2022.11.015 (Q3, Rank 50/164 in Statistics & Probability, Impact Factor: 1.43)
+                </li>
+                <li class="citation">
+                    Hitting properties of generalized fractional kinetic equation with time-fractional noise. (Joint with Derui Sheng) Stoch. Partial Differ. Equ. Anal. Comput, published online. DOI: 10.1007/s40072-023-00321-w (Q2, Rank 52/164 in Statistics & Probability, Impact Factor: 1.5)
+                </li>
+                <li class="citation">
+                    Large deviations principle for stochastic delay differential equations with super-linearly growing coefficients. (Joint with Diancong Jin and Ziheng Chen) Front. Math., published online. DOI: 0.1007/s11464-023-0072-3 (Q2, Rank 152/485 in Mathematics, Impact Factor: 0.9)
+                </li>
+            </ul>
         </div>
     </section>
 
@@ -59,7 +88,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 [Zhou Tao]. All rights reserved.</p>
+        <p>&copy; 2024 Zhou Tao. All rights reserved.</p >
     </footer>
 
     <script src="scripts.js"></script>
