--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p>2024.09-, Assistant Professor, School of Mathematics and Statistics, HNNU, Changsha.</p >
-        <p>08.2023-08.2024, Postdoctoral Fellow, AMA, PolyU, Hong Kong, worked with Dr. Jianbo Cui.</p >
+        <p>08.2023-08.2024, Postdoctoral Fellow, AMA, PolyU, Hong Kong.</p >
         <p>09.2018-08.2023, Ph.D., Chinese Academy of Sciences, Beijing, where I was supervised by Prof. Jialin Hong, major in Computational Mathematics.</p >
         <p>09.2014-06.2018, B.S., Hunan Normal University, Changsha, major in Statistics.</p >
     </section>
